frontend/src/elements/Text.css
.streamlit-container .fixed-width {
  font-family: 'IBM Plex Mono', monospace;
  white-space: pre;
  font-size: 0.8rem;
  overflow-x: auto;
}

.streamlit-container .markdown-text-container {
  font-family: 'IBM Plex Sans', sans-serif;
  /* font-family: 'IBM Plex Serif', serif; */
  margin-bottom: -1rem;
}

.streamlit-container .markdown-text-container p {
  margin: 0 0 1rem 0;
}

.streamlit-container .markdown-text-container code {
  padding: 0.2em 0.4em;
  margin: 0;
  border: 1px solid #E6E9EE;
  border-radius: 3px;
}

.streamlit-container .markdown-text-container pre {
  border: 1px solid #E6E9EE;
  border-radius: 3px;
  padding: 1rem;
  margin: 0 0 1rem 0;
}

.streamlit-container .markdown-text-container pre > code {
  background: transparent;
  border: 0;
  display: inline;
  font-size: 0.8rem;
  line-height: inherit;
  margin: 0;
  max-width: auto;
  overflow: visible;
  padding: 0;
  white-space: pre;
  word-break: normal;
  word-wrap: normal;
}

.streamlit-container .markdown-text-container blockquote {
  margin: 0;
  border-left: 0.5em #E6E9EE solid;
  padding: 1rem 0 1rem 1rem;
  margin: 0 0 1rem 0;
}

.streamlit-container .markdown-text-container tr {
  border-top: 1px solid #c6cbd1;
  background: #fff;
}

.streamlit-container .markdown-text-container th, td {
  padding: 6px 13px;
  border: 1px solid #E6E9EE;
}

.streamlit-container .markdown-text-container table tr:nth-child(2n) {
  background: #f6f9fa;
}

/* This is used to point to the specific part of the pre.error that
   caused an error. */
.streamlit-container .json-text-container span.error {
  padding: 0.2em 0.4em;
  margin: 0;
  background-color: #df616d60;
  border-bottom: 1px dashed #df616d;
}

.streamlit-container .json-text-container pre.error {
  padding: 5px;
  white-space: pre-wrap;
  word-wrap: break-word;
}

.streamlit-container .react-json-view {
  font-family: 'IBM Plex Mono', monospace;
  font-size: 0.8rem;
}

.streamlit-container .alert {
  margin: 0;
}

